# advent-of-code

./: .gitattributes  .gitignore  LICENSE  README.md
.git-crypt/keys/default/0/: 0544B8FFB2345113BBE0B404F2EDF21F8BED59D5.gpg
2015/: Cargo.toml
2015/benches/: benchmarks.rs
2015/src/: day1.rs  day2.rs  lib.rs
2020/: Cargo.toml
2020/benches/: benchmarks.rs
2020/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.input  day8.rs  day9.input  day9.rs  lib.rs
2021/: build.gradle
2021/src/main/kotlin/com/trikzon/aoc2021/: Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day2.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt  Helpers.kt
2021/src/main/resources/: day13.txt
2022/: CMakeLists.txt
2022/inputs/: day01.input
2022/src/: aoc.cpp  aoc.h  main.cpp
2022/src/days/: day01.cpp  day02.cpp  days.cpp  days.h
2023/: Aoc2023.sln  Program.cs
2023/src/: Day.cs  Day01.cs  Day02.cs  Day03.cs  Day04.cs
2024/Puzzles/: day1.example  day1.input  day1.md  day2.example  day2.input  day2.md  day3.example  day3.input  day3.md  day4.example  day4.input  day4.md
2024/Rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  main.rs  utils.rs
2025/Puzzles/: day1.example  day1.input  day1.md  day2.example  day2.input  day2.md  day3.example  day3.input  day3.md  day4.example  day4.input  day4.md
2025/Zig/: build.zig  build.zig.zon
2025/Zig/src/: day1.zig  day2.zig  day3.zig  day4.zig  main.zig  utils.zig
